--- a/src/app/flex/flex.component.html
+++ b/src/app/flex/flex.component.html
@@ -1,10 +1,27 @@
 <div class="container">
-    <nav>Header</nav>
+    <div>
+        <nav>Header</nav>
+    </div>
     <div class="middle-area">
         <main>
-            Body
+            <div class="one">
+                <div class="two">
+                    <div class="three">
+                        <button>button</button>
+                        <button>button</button>
+                        <button>button</button>
+                        <button>button</button>
+                        <button>button</button>
+                    </div>
+                    <div class="four">
+                        <app-flex-form></app-flex-form>
+                    </div>
+                </div>
+            </div>
         </main>
         <div class="sidebar">Side bar</div>
     </div>
-    <footer>Footer</footer>
+        <div>
+            <footer>Footer</footer>
+        </div>
 </div>
