--- a/src/app/flex/flex-form/flex-form.component.html
+++ b/src/app/flex/flex-form/flex-form.component.html
@@ -1,11 +1,11 @@
-<form class="myForm">
+<form class="myForm" [formGroup]="form">
     <div class="title">Title</div>
-    <input type="text" placeholder="Text Form Field">
-    <input type="text" placeholder="Text Form Field">
-    <input type="text" placeholder="Text Form Field">
-    <input type="text" placeholder="Text Form Field">
+    <input type="text" placeholder="Text Form Field 1" formControlName="fieldOne">
+    <input type="text" placeholder="Text Form Field 2" formControlName="fieldTwo">
+    <input type="text" placeholder="Text Form Field 3" formControlName="feildThree">
+    <input type="text" placeholder="Text Form Field 4" formControlName="feildFour">
     <div class="controls">
-        <button>Reset Button</button>
-            <button class="button-two">Submit Button</button>
+        <button type="button">Reset Button</button>
+        <button type="button" [disabled]="form.invalid" class="button-two" (click)="send()">Submit Button</button>
     </div>
 </form>
