--- a/src/app/flex/flex.component.html
+++ b/src/app/flex/flex.component.html
@@ -7,11 +7,7 @@
             <div class="one">
                 <div class="two">
                     <div class="three">
-                        <button>button</button>
-                        <button>button</button>
-                        <button>button</button>
-                        <button>button</button>
-                        <button>button</button>
+                        <button style="padding: 20px;" *ngFor="let item of [].constructor(11)"> MENU ITEM</button>
                     </div>
                     <div class="four">
                         <app-flex-form></app-flex-form>
