--- a/src/app/flex/flex-form/flex-form.component.css
+++ b/src/app/flex/flex-form/flex-form.component.css
@@ -2,6 +2,7 @@ input{
     width: 100%;
     margin-top: 48px;
     padding: 40px;
+    font-size: 20px;
 }
 
 .title {
@@ -21,4 +22,5 @@ input{
 
 button{
     margin-top: 26px;
+    padding: 10px;
 }
