--- a/src/app/grid/form/form.component.html
+++ b/src/app/grid/form/form.component.html
@@ -1,17 +1,11 @@
-<div class="form-container">
-    <div class="items">
-        <button>Red</button>
-        <button>Red</button>
+<form class="myForm" [formGroup]="form">
+    <div class="title">Title</div>
+    <input type="text" placeholder="Text Form Field 1" formControlName="fieldOne">
+    <input type="text" placeholder="Text Form Field 2" formControlName="fieldTwo">
+    <input type="text" placeholder="Text Form Field 3" formControlName="feildThree">
+    <input type="text" placeholder="Text Form Field 4" formControlName="feildFour">
+    <div class="controls">
+        <button type="button" [disabled]="form.invalid" (click)="formReset()">Reset Button</button>
+        <button type="button" [disabled]="form.invalid" class="button-two" (click)="send()">Submit Button</button>
     </div>
-    <form class="myForm">
-        <div class="title">Title</div>
-        <input type="text" placeholder="Text Form Field">
-        <input type="text" placeholder="Text Form Field">
-        <input type="text" placeholder="Text Form Field">
-        <input type="text" placeholder="Text Form Field">
-        <div class="controls">
-            <button>Reset Button</button>
-            <button>Submit Button</button>
-        </div>
-    </form>
-</div>
+</form>
