--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,7 +1,16 @@
 <div class="container">
     <nav>Header</nav>
     <main>
-        <app-form></app-form>
+            <div class="one">
+                <div class="two">
+                    <div class="three">
+                        <button style="padding: 20px;" *ngFor="let item of [].constructor(11)"> MENU ITEM</button>
+                    </div>
+                    <div class="four">
+                        <app-form></app-form>
+                    </div>
+                </div>
+            </div>
     </main>
     <div class="sidebar">Side bar</div>
     <footer>Footer</footer>
