--- a/src/app/flex/flex-form/flex-form.component.css
+++ b/src/app/flex/flex-form/flex-form.component.css
@@ -24,3 +24,22 @@ button{
     margin-top: 26px;
     padding: 10px;
 }
+
+@media only screen and (max-width: 550px) {
+    .form-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas:
+        "controls";
+    }
+  
+    input {
+      padding: 0px;
+    }
+  
+    button{
+      padding: 1px;
+      width: 75px;
+    }
+  
+  }
