--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -27,6 +27,8 @@ main {
     height: 88vh;
     max-height: 90vh;
     overflow-y: auto;
+    display: grid;
+    align-content: center;
 }
 
 .sidebar {
@@ -53,15 +55,15 @@ footer {
     font-size: 30px;
     text-align: center;
 }
-
-.one {
-    border: 1px dashed black;
-    margin: 77px;
+.one{
+    display: grid;
+    justify-content: center;
 }
 
 .two {
     display: grid;
     grid-template-columns: 0.3fr 1fr;
+    border: 1px dashed black;
 }
 
 @media only screen and (max-width: 550px) {
@@ -75,6 +77,7 @@ footer {
     }
 
     .two {
+        border: none;
         display: grid;
         grid-template-columns: auto;
     }
@@ -92,7 +95,7 @@ footer {
     }
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 550px) {
     .container {
         grid-template-rows: 0.1fr 2fr 0.1fr;
         grid-template-areas:
@@ -109,4 +112,9 @@ footer {
     .three {
         display: none;
     }
+
+    .one{
+        border: none;
+    }
+    
 }
