--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-    <nav>Header</nav>
+    <nav [ngStyle]="{'background-color':color$ | async}">Header</nav>
     <main>
             <div class="one">
                 <div class="two">
                     <div class="three">
-                        <button style="padding: 20px;" *ngFor="let item of [].constructor(11)"> MENU ITEM</button>
+                        <button class="items" [ngStyle]="{'background-color':item}"
+                        *ngFor="let item of colors$ |async" (click)="changeColor(item)"> MENU ITEM</button>
                     </div>
                     <div class="four">
                         <app-form></app-form>
@@ -13,5 +14,5 @@
             </div>
     </main>
     <div class="sidebar">Side bar</div>
-    <footer>Footer</footer>
+    <footer [ngStyle]="{'background-color':color$ | async}">Footer</footer>
 </div>
