--- a/src/app/flex/flex-form/flex-form.component.css
+++ b/src/app/flex/flex-form/flex-form.component.css
@@ -1,45 +1,57 @@
-input{
-    width: 100%;
-    margin-top: 48px;
-    padding: 40px;
-    font-size: 20px;
+input {
+  width: 100%;
+  margin-top: 48px;
+  padding: 40px;
+  font-size: 20px;
 }
 
 .title {
-   color: white;
-    background-color: rgb(0, 128, 255);
-    font-size: 21px;
+  color: white;
+  background-color: rgb(0, 128, 255);
+  font-size: 21px;
+  margin-bottom: -36px;
+  padding: 13px;
 }
 
-.controls{
-    display: flex;
-    justify-content: center;
+.controls {
+  display: flex;
+  justify-content: center;
 }
 
-.button-two{
-    margin-left: 67px;
+.button-two {
+  margin-left: 67px;
 }
 
-button{
-    margin-top: 26px;
-    padding: 10px;
+button {
+  margin-top: 26px;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 1px solid red;
 }
 
 @media only screen and (max-width: 550px) {
-    .form-container {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      grid-template-areas:
-        "controls";
-    }
-  
-    input {
-      padding: 0px;
-    }
-  
-    button{
-      padding: 1px;
-      width: 75px;
-    }
-  
+  .form-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+      "controls";
   }
+
+  input {
+    padding: 0px;
+  }
+
+  button {
+    padding: 1px;
+    width: 75px;
+  }
+
+  .button-two{
+    margin-left: 28px !important;
+  }
+
+}
