--- a/src/app/flex/flex.component.css
+++ b/src/app/flex/flex.component.css
@@ -73,6 +73,16 @@ button {
     width: 100%;
 }
 
+.items {
+    padding: 20px;
+    color: white;
+    cursor: pointer;
+}
+
+.items:hover {
+    margin-top: 2px;
+}
+
 @media only screen and (max-width: 550px) {
     .sidebar {
         display: none;
