--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -71,6 +71,16 @@ footer {
     border: 1px dashed black;
 }
 
+.items {
+    padding: 20px;
+    color: white;
+    cursor: pointer;
+}
+
+.items:hover {
+    margin-top: 2px;
+}
+
 @media only screen and (max-width: 550px) {
     .container {
         grid-template-rows: 0.1fr 2fr 0.1fr;
